<resources>
    <string name="app_name">Hustle</string>
    <string name="hustle">HUSTLE</string>
    <string name="travel">Let\'s See the World</string>
    <string name="have_an_account">Already\nhave an \nAccount?</string>
    <string name="hustle_logo">Hustle_Logo</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="use_other_methods">Use Other Methods</string>
    <string name="facebook">Facebook</string>
    <string name="todo">TODO</string>
    <string name="google">Google</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hey">Hey</string>
    <string name="where_you_want_to_go">Where you want to go.</string>
    <string name="search_buses">Search Buses</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
    <string name="select_date">Select Date*</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="bus_time">Bus Time</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="email">EMAIL</string>
    <string name="update">UPDATE</string>
    <string name="booked">BOOKED</string>
    <string name="full_name">FULL NAME</string>
    <string name="logout">LOGOUT</string>
    <string name="status">STATUS</string>
    <string name="profile">PROFILE INFO</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="here_s_n_your_n_first_n_step_with_n_us">Here\'s\n your\n first \n step with \n us!</string>
    <string name="already_a_user">Already a User?</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp">We will send you an One Time Password on this given mobile number.</string>
    <string name="otphead">OTP VERIFICATION</string>
    <string name="_91">+91</string>
    <string name="phone_hint">987654321</string>
    <string name="get_otp">GET OTP</string>
    <string name="resend_otp_again">RESEND OTP AGAIN</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP</string>
    <string name="please_enter_the_otp_sent_to_you">Please enter the OTP sent to you</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="skip_this_step">SKIP THIS STEP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="complete_n_your_n_profile">Complete\nYour\nProfile</string>
    <string name="colon">:</string>
    <string name="everything_ok">EVERYTHING OK!</string>
    <string name="your_nprofile">YOUR \nPROFILE</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="select_source">Select Source*</string>
    <string name="select_destination">Select Destination*</string>
    <string name="Select_src">Select Source</string>
    <string name="select_your_bus">Select your bus!</string>
    <string name="seat">seat</string>
    <string name="available">Available</string>
    <string name="your_seat">Your Seat</string>
    <string name="_1">1</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="book_now">BOOK NOW</string>
    <string name="pay_to_book">PAY TO BOOK</string>
    <string name="menu">menu</string>
    <string name="choose_your_work_from_menu">!Choose your Work from Menu!</string>
    <string name="arrival_time">ARRIVAL TIME</string>
    <string name="fare">FARE</string>
</resources>