<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DashBoard">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/themeColor"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.Toolbar"
            android:elevation="4dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:padding="6dp"
                    android:fontFamily="@font/bangers"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="25sp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/ic_person_outline_white_24dp"
                    android:visibility="visible" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/bus_image_1" />

        <TextView
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/print_clearly"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uname"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/gotham"
            android:text="@string/where_you_want_to_go"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </RelativeLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="-44dp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/select_source"
                    android:textSize="12sp"
                    android:paddingTop="8dp"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/calibri"
                    app:drawableStartCompat="@drawable/ic_location_on_light_blue_24dp" />

                <Spinner
                    android:id="@+id/Source"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@string/Select_src"
                    android:tooltipText="@string/source" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:paddingTop="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/select_destination"
                    android:textSize="12sp"
                    android:fontFamily="@font/calibri"
                    android:drawablePadding="5dp"
                    app:drawableStartCompat="@drawable/ic_location_on_light_blue_24dp" />

                <Spinner
                    android:id="@+id/Destination"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:contentDescription="@string/destination"
                    android:tooltipText="@string/destination" />


                <Button
                    android:id="@+id/date_pick"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/background_light"
                    android:drawableStart="@drawable/ic_date_range_light_blue_24dp"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/select_date"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textColorHint="#757575"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/s_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/calibri"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:text="Selected Date will be shown here"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/search_buses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/calibri"
            android:text="@string/search_buses"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    </ScrollView>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>