<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Profile"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        android:background="@color/themeColor">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="136dp"
            android:layout_height="156dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/bus_image_1"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/profile"
            android:fontFamily="@font/bungee"
            android:includeFontPadding="false"
            android:text="@string/your_nprofile"
            android:textColor="#B388FF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/profile"
            android:includeFontPadding="false"
            android:text="@string/username"
            android:textColor="#40C4FF"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/profile"
            android:layout_alignTop="@+id/profile"
            android:layout_alignEnd="@+id/profile"
            android:layout_marginStart="81dp"
            android:layout_marginTop="103dp"
            android:layout_marginEnd="-2dp"
            android:clickable="true"
            android:contentDescription="@string/profile_picture"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:srcCompat="@drawable/ic_person_outline_white_24dp"
            tools:ignore="ImageContrastCheck" />

    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="-80dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:layout_margin="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:background="@color/themeColor">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/bus_booking_round_logo"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/bungee"
                        android:textColor="@color/colorAccent"
                        android:includeFontPadding="false"
                        android:text="@string/bus_time"
                        android:textSize="14sp"
                        tools:ignore="TextContrastCheck" />
                    <TextView
                        android:id="@+id/bus_time"
                        android:layout_width="wrap_content"
                        android:textColor="@color/primaryTextColor"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/time"
                        android:text="@string/bus_time"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/themeColor"
                app:cardElevation="10dp"
                android:layout_margin="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:background="@color/themeColor">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/your_seat_img"
                        tools:ignore="ImageContrastCheck"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:text="@string/status"
                        android:textColor="#E1BEE7"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/stat"
                        android:textColor="@color/primaryTextColor"
                        android:text="@string/booked"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="UserName"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="10dp"
                    android:id="@+id/uname"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_baseline_phone_android_24"
                    android:drawablePadding="10dp"
                    android:textColor="#546E7A"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/bungee"
                android:text="@string/update"
                android:id="@+id/update"
                android:textAlignment="center"
                android:textColor="#4FC3F7" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/bungee"
                android:text="@string/everything_ok"
                android:id="@+id/okay"
                android:textAlignment="center"
                android:textColor="#4FC3F7" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/bungee"
                android:drawableTop="@drawable/ic_baseline_exit_to_app_24"
                android:drawablePadding="-10dp"
                android:text="@string/logout"
                android:id="@+id/sign_out"
                android:textColor="@color/primaryTextColor"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>